--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ header>h1 {
     padding: 10px;
     display: inline-block;
     transition: all 0.3 ease;
+    width: 100px;
 }
 
 .choice:hover{
@@ -91,4 +92,8 @@ header>h1 {
     font-weight: bold;
     font-size: 20px;
     margin-top: 20px;
+}
+
+img{
+    width: 80%;
 }
