--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,6 @@ img{
 }
 
 .gray-glow{
-    border: 4px solid #464647 !important;
-    box-shadow: 0 0 10px #25292b;
+    border: 4px solid #ff8000  !important;
+    box-shadow: 0 0 10px #ff8000 ;
 }
